--- a/playbooks/roles/apache_installation/templates/debian_ports.j2
+++ b/playbooks/roles/apache_installation/templates/debian_ports.j2
@@ -2,7 +2,7 @@
 # have to change the VirtualHost statement in
 # /etc/apache2/sites-enabled/000-default.conf
 
-Listen {{ http_port }}
+Listen {{ apache_http_port }}
 
 <IfModule ssl_module>
 	Listen 443
