a few modification in galera role

--- a/playbooks/roles/galera-installation/templates/galera.j2
+++ b/playbooks/roles/galera-installation/templates/galera.j2
@@ -18,4 +18,11 @@ wsrep_retry_autocommit={{ wsrep_retry_autocommit }}
 wsrep_auto_increment_control={{ wsrep_auto_increment_control }}
 wsrep_drupal_282555_workaround={{ wsrep_drupal_282555_workaround }}
 wsrep_causal_reads={{ wsrep_causal_reads }}
-
+binlog_format={{ binlog_format }}
+binlog_row_event_max_size={{ binlog_row_event_max_size }}
+binlog_cache_size={{ binlog_cache_size }}
+innodb_autoinc_lock_mode={{ innodb_autoinc_lock_mode }}
+innodb_locks_unsafe_for_binlog= {{ innodb_locks_unsafe_for_binlog }}
+innodb_file_per_table = {{ innodb_file_per_table }}
+innodb_doublewrite = {{ innodb_doublewrite }}
+innodb_flush_log_at_trx_commit = {{ innodb_flush_log_at_trx_commit }}
