modification to mariadb role

--- a/playbooks/roles/mariadb_installation/templates/mariadb.j2
+++ b/playbooks/roles/mariadb_installation/templates/mariadb.j2
@@ -11,7 +11,7 @@ innodb_flush_method = {{ innodb_flush_method }}
 innodb_log_file_size = {{ innodb_log_file_size }}
 innodb_log_buffer_size = {{ innodb_log_buffer_size }}
 max_allowed_packet = {{ max_allowed_packet }}
-key_buffer = {{ key_buffer }}
+key_buffer_size = {{ key_buffer_size }}
 join_buffer_size = {{ join_buffer_size }}
 read_buffer_size = {{ read_buffer_size }}
 sort_buffer_size = {{ sort_buffer_size }}
