modified to make interface and route entieries

--- a/playbooks/roles/galera-installation/templates/galera.j2
+++ b/playbooks/roles/galera-installation/templates/galera.j2
@@ -3,8 +3,8 @@ wsrep_on=ON
 wsrep_provider=/usr/lib64/galera/libgalera_smm.so
 wsrep_cluster_name={{ wsrep_cluster_name }}
 wsrep_cluster_address="gcomm://{% for host in groups['dbservers'] %}{{ hostvars[host][ interface ]['ipv4']['address'] }}{% if not loop.last %},{% endif %}{% endfor %}"
-wsrep_node_address={{ ansible_eth0.ipv4.address }}
-bind-address={{ ansible_eth0.ipv4.address }}
+wsrep_node_address={{ hostvars[inventory_hostname][ interface ]['ipv4']['address'] }}
+bind-address={{ hostvars[inventory_hostname][ interface ]['ipv4']['address'] }}
 wsrep_node_name={{ ansible_hostname }}
 wsrep_sst_method={{ wsrep_sst_method }}
 wsrep_slave_threads={{ wsrep_slave_threads }}
